syntax = "proto3";

package proto;

option go_package = "data";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message AuthMessagePb{
    bytes Message   = 1;
    bytes Sig       = 2;
    bytes Pubkey    = 3;
    int64 Timestamp = 4;
}
